# MauveWeasel

./: .gitignore  Cargo.toml  README.md  options.toml  settings.toml
cache/: toc.html
newsgen/: 1.md
postbox/: 21ea3493-a977-418f-bb59-ca36b845b09a.txt  9b864e37-a927-4394-a21a-0528efee8fbc.txt
src/: main.rs
src/mauveweasel/: comment.rs  cookie.rs  handler.rs  helpers.rs  http.rs  mod.rs  options.rs  router.rs  server.rs  settings.rs  types.rs  utility.rs
src/mauveweasel/components/: contactform.rs  mod.rs  newsgen.rs  postbox.rs
src/mauveweasel/fdo/: acl.rs  datalayer.rs  mod.rs  user.rs
src/mauveweasel/tools/: mod.rs  uuid_keystore.rs
templates/: contact.hbs
templates/newsgen/: article.hbs  toc.hbs
