[package]
name = "mauveweasel"
version = "0.1.0"
authors = ["ne0ndrag0n <ne0ndrag0n@users.noreply.github.com>"]

[dependencies]
bincode = "1.0.1"
toml = "0.4"
bcrypt = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.5.1"
serde_json = "1.0"
comrak = "0.2"
handlebars = "1.0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.7", features = ["v4"] }
